syntax = "proto3";
option go_package = "./push;pbPush";
package push;

message PushMsgReq {
  string SendID = 1;
  string RecvID = 2;
  string Content = 3;
  int64 RecvSeq = 4;
  int64 SendTime = 5;
  int32 MsgFrom = 6;
  int32 ContentType = 7;
  int32 SessionType = 8;
  string OperationID = 9;
  string MsgID = 10;
  string OfflineInfo = 11;
  string Options =12;
  int32  PlatformID =13;
  string SenderNickName = 14;
  string SenderFaceURL = 15;
  string ClientMsgID = 16;
}
message PushMsgResp{
  int32   ResultCode = 1;
}
//message InternalPushMsgReq{
//  int32 ReqIdentifier = 1;
//  string Token = 2;
//  string SendID = 3;
//  string OperationID = 4;
//  int32 MsgIncr = 5;
//  int32 PlatformID = 6;
//  int32 SessionType = 7;
//  int32 MsgFrom = 8;
//  int32 ContentType = 9;
//  string RecvID = 10;
//  repeated string ForceList = 11;
//  string Content = 12;
//  string Options = 13;
//  string ClientMsgID = 14;
//  string OffLineInfo = 15;
//  string Ex = 16;
//
//}

service PushMsgService {
  rpc PushMsg(PushMsgReq) returns(PushMsgResp);
//  rpc InternalPushMsg(InternalPushMsgReq)returns(PushMsgResp);
}

